# CodingTools

./: README.md  pyproject.toml  pyproject_test.toml
src/CodingTools/: BuiltinFunction.py  Command.py  Config.py  DataType.py  Decorator.py  Decorator.pyi  Definition.py  Descriptor.py  Descriptor.pyi  ErrorClass.py  ErrorClass.pyi  Function.py  Function.pyi  Inheritance.py  Inheritance.pyi  Wrapper.py  __CodingCommands__.py  __init__.py  __init__.pyi  os.py
src/CodingTools/Error/: Attribute.py  Other.py  Skeleton.py
tests/: Command.py  Config.py  DataClass.py  Decorator.py  Descriptor.py  Inheritance.py  WrapperClass.py  __init__.py  conf.cnf
