[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "CodingTools"
version = "3.1.0"
description = "This module contains tools that you can use to code programs."

readme = "README.md"
license = {file="LICENSE"}

requires-python = ">=3.13"
dependencies = [
]

authors = [
   {name="AtoKashinoki", email="atokashinoki@gmail.com"}
]
classifiers = [
   "Programming Language :: Python :: 3.13",
   "License :: OSI Approved :: MIT License",
]


[project.urls]
"Homepage" = "https://github.com/AtoKashinoki/CodingTools"
"Bug Tracker" = "https://github.com/AtoKashinoki/CodingTools/issues"


[project.scripts]
CodingTools = "CodingTools.Command:CodingTools.__call__"
