[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'CodingTools'
version = '3.8.2'
description = 'This module contains tools that you can use to code programs.'

readme = 'README.md'
license = {file='LICENSE'}

requires-python = '>=3.8'
dependencies = [
]

authors = [
   {name='AtoKashinoki', email='atokashinoki@gmail.com'}
]
classifiers = [
   'Development Status :: 3 - Alpha',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: MIT License',
   'Natural Language :: English',
   'Operating System :: OS Independent',
   'Programming Language :: Python :: 3.8',
   'Programming Language :: Python :: 3.9',
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
   'Programming Language :: Python :: 3.13',
   'Programming Language :: Python :: Implementation :: CPython',
   'Topic :: Software Development :: Libraries :: Python Modules',
   'Topic :: Utilities',
]


[project.urls]
"Homepage" = "https://github.com/AtoKashinoki/CodingTools"
"Bug Tracker" = "https://github.com/AtoKashinoki/CodingTools/issues"


[project.scripts]
CodingTools = "CodingTools.__CodingCommands__:CodingTools.__call__"
